[gd_scene load_steps=21 format=3 uid="uid://dqj6oif0vamqc"]

[ext_resource type="Script" uid="uid://ittn41vqy6wa" path="res://scripts/npc/jenne.gd" id="1_gsd7x"]
[ext_resource type="Texture2D" uid="uid://bsd1vcd43lool" path="res://assets/Personagens/Janne/Jenni_pixilart-sprite.png" id="2_clu3g"]
[ext_resource type="FontFile" uid="uid://dhq1kbwvasqme" path="res://assets/pixel_Fonte/pixelart.ttf" id="3_xrsdb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xrsdb"]
atlas = ExtResource("2_clu3g")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a3el"]
atlas = ExtResource("2_clu3g")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djq0d"]
atlas = ExtResource("2_clu3g")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epd2m"]
atlas = ExtResource("2_clu3g")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynavt"]
atlas = ExtResource("2_clu3g")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhfk1"]
atlas = ExtResource("2_clu3g")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2ghb"]
atlas = ExtResource("2_clu3g")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqhdo"]
atlas = ExtResource("2_clu3g")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch14i"]
atlas = ExtResource("2_clu3g")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y52bg"]
atlas = ExtResource("2_clu3g")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5ue4"]
atlas = ExtResource("2_clu3g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chq4h"]
atlas = ExtResource("2_clu3g")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6yfcm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrsdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a3el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djq0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epd2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynavt")
}],
"loop": true,
"name": &"andar_direita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhfk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2ghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqhdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch14i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y52bg")
}],
"loop": true,
"name": &"andar_esquerda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ue4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chq4h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xrsdb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yubvh"]
size = Vector2(126, 60)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swgmj"]
bg_color = Color(0.0196078, 0.0196078, 0.0196078, 0.470588)

[sub_resource type="LabelSettings" id="LabelSettings_pt8xt"]
font = ExtResource("3_xrsdb")
shadow_size = 7
shadow_color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[node name="jenne" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_gsd7x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6yfcm")
animation = &"andar_esquerda"
autoplay = "idle"
frame_progress = 0.296134

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_xrsdb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_yubvh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 65.0
offset_top = 228.0
offset_right = 585.0
offset_bottom = 324.0
theme_override_styles/normal = SubResource("StyleBoxFlat_swgmj")
autowrap_mode = 2

[node name="TextoDialogo" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 147.0
offset_top = 254.0
offset_right = 581.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 14
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="nomelabel" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 231.0
offset_right = 245.0
offset_bottom = 254.0

[node name="Retrato" type="TextureRect" parent="CanvasLayer"]
offset_left = 73.0
offset_top = 248.0
offset_right = 133.0
offset_bottom = 307.0
stretch_mode = 5

[node name="LabelInteracao" type="Label" parent="."]
offset_left = -28.0
offset_top = -54.0
offset_right = 35.0
offset_bottom = -26.0
label_settings = SubResource("LabelSettings_pt8xt")
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
